k8s/homepage/04-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-ingressroute
  namespace: homepage
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homepage.localhost`)
      kind: Rule
      services:
        - name: homepage-service
          port: 3000
